--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-react": "^6.16.0",
     "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
     "html-webpack-plugin": "^2.24.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
