--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "babel-loader": "^6.2.10",
     "babel-preset-react": "^6.16.0",
     "eslint": "^3.12.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-react": "^4.2.0",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-standard": "^2.0.1",
     "html-webpack-plugin": "^2.24.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
