changed eslintrc config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,1 +1,11 @@
-"extends": ["standard", "standard-react"]
+{"extends": ["standard", "standard-react"],
+  "rules": {
+    "quotes": [2, "single"],
+    "no-console": 0,
+    "no-unused-vars": 0,
+    "react/display-name": 0,
+    "react/prop-types": 0,
+    "react/no-multi-comp": 0,
+    "semi": 0
+  }
+}
